# Projet_Special_Rendu_D

./: README.md  carte_itinéraire_deviée.html  carte_itinéraire_droit.html  creation_csv.py  main.elsa.py  main.py  main2.py  main3.py  oral.pptx  pyproject.toml  requirements.txt  trajet.html  trajet_robuste.html  ~$oral.pptx
Data/: Waypoints.csv  avions.csv
Itineraire-aérien-package/: LICENSE.md  main.py  requirements.txt
Itineraire-aérien-package/Cartes/: carte_resultat.html
Itineraire-aérien-package/Data/: Villes.csv  avions.csv
Itineraire-aérien-package/ItineraireAerien/: __init__.py
Itineraire-aérien-package/ItineraireAerien/Avion/: __init__.py  avion_manager.py
Itineraire-aérien-package/ItineraireAerien/Meteo/: __init__.py  donnees_meteo.py  meteo_manager.py
Itineraire-aérien-package/ItineraireAerien/Visualisation/: __init__.py  navigation_manager.py  trajectoire_manager.py  visualisation_manager.py
Itineraire-aérien-package/ItineraireAerien/coordonees/: __init__.py
docs/source/: conf.py  index.rst  manager.rst
modules/manager/: avion_manager.py  donnees_meteo.py  meteo_manager.py  navigation_manager.py  trajectoire_manager.py  visualisation_manager.py
outils/coordonees/: coordonees_villes.py
source/: conf.py  index.rst
